<resources>
    <string name="app_name">Eventure</string>
    <string name="welcome_msg">Welcome to Eventure</string>
    <string name="email_login">Enter your email address</string>
    <string name="password_login">Enter your password</string>
    <string name="login">Login</string>
    <string name="create_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account_msg">Create an account</string>
    <string name="login_msg">Have an account?</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="registered_events">Registered Events</string>
    <string name="reports">Generate reports</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_home">Home</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="set_profile_picture">Set Profile Picture</string>
    <string name="save_profile">Save Profile</string>
    <string name="register">Register</string>
    <string name="event_title">Event Title</string>
    <string name="event_date">Event Date</string>
    <string name="event_location">Event Location</string>
    <string name="event_description">Event Description</string>
    <string name="event_organizer">Event Organizer</string>
    <string name="phone">Enter your phone number</string>
    <string name="tickets">Tickets</string>
    <string name="submit_button">Submit</string>
    <string name="title_login_name">Login</string>
    <string name="title_register_name">Register</string>
    <string name="overview_statistics">Overview Statistics</string>
    <string name="total_attendees">Total Attendees</string>
    <string name="number">Number</string>
    <string name="create_event">Create Event</string>
    <string name="view_my_events">View My Events</string>
    <string name="event_category">Event Category</string>
    <string name="maximum_attendees">Maximum Attendees</string>
    <string name="registration_deadline">Registration Deadline</string>
    <string name="organization">Organization</string>
    <string name="my_events">My Events</string>
    <string name="analytics">Analytics</string>
    <string name="role_select">Select your role</string>
    <string name="logout">Logout</string>
    <string name="set_event_image">Set Event Image</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="event_details">Event Details</string>
    <string name="update_event">Update Event</string>
    <string name="password_reset">Forgot your password? Click here to reset</string>
    <string name="reset_button">Reset</string>
    <string name="track">Track</string>
    <string name="manage">Manage</string>
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="set_profile_image">Set Profile Picture</string>
    <string name="profile_organization">Organization</string>
    <string name="set_profile">Save Profile</string>
    <string name="users">Users</string>
    <string name="manage_events">Manage Events</string>
    <string name="manage_users">Manage Users</string>
    <string name="event_attendees">My Event Attendees</string>
    <string name="view_attendees">Attendees</string>
    <string name="role">Role</string>
</resources>